tests/comp/sem/valid/return_int.mj
class A {

	public int test(int x) {
		return x;
	}

}
