tests/comp/sem/invalid/not_minus_int.mj
class A {

	public void test(int foo) {
		/*** ! ***/ -foo;
	}

	public static void main(String[] args) {
	}

}
